# splotch

./: .gitignore  Makefile  README
booster/: m_rotation.cc  mesh_creator.cc  mesh_creator_vs1.cc  mesh_vis.h  p_selector.cc  randomizer.cc
c_utils/: walltime_c.c
converter/: add_block.pro  darray.pro  gadget2_to_gadget2.pro  ifexeq.pro  is_def.pro  martin_to_gadget2.pro  setconst.pro  write_head.pro
cuda/: CuPolicy.cu  CuPolicy.h  CuRender.cu  CuRender.h  Cuda-1.rules  cuda_device_query.cu  cuda_kernel.cu  cuda_kernel.cuh  cuda_policy.cu  cuda_policy.h  cuda_render.cu  cuda_render.h  cuda_splotch.cc  cuda_splotch.h  cuda_utils.cu  cuda_utils.h  deviceQuery.cu  sample.par  splotch.cu  splotch_cuda.h  splotch_cuda2.cc  splotch_cuda2.h  splotch_kernel.cu
cxxsupport/: alloc_utils.h  announce.cc  arr.h  cxxutils.h  datatypes.h  error_handling.cc  geom_utils.h  ls_image.cc  ls_image.h  math_utils.h  mpi_support.cc  mpi_support.h  paramfile.h  psort.h  share_utils.h  sort_utils.h  string_utils.cc  string_utils.h  walltimer.cc  walltimer.h
kernel/: colour.h  colourmap.h  transform.cxx  transform.h
labeltool/: splotchColormap.py  splotchLabelFrames.sh
mic/: MIC_README  mic_allocator.cc  mic_allocator.h  mic_arr.h  mic_compute_params.cc  mic_kernel.cc  mic_kernel.h  mic_pod_arr.h  mic_splotch.cc  mic_splotch.h  mic_timer.h  mic_utils.h
mpiio-1.0/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
mpiio-1.0/include/: partition.h
mpiio-1.0/m4/: ac_mpi.m4  enable.m4
mpiio-1.0/man/: MPI_Ajo_partition.1  MPI_Ajo_read.1  MPI_Ajo_write.1  Makefile.am  Makefile.in
mpiio-1.0/src/: Makefile.am  Makefile.in  partition.c  partition.h
opencl/: CuPolicy.cpp  Policy.h  deviceQuery.cpp  splotch.cl  splotch.cpp  splotch_cuda.h  splotch_cuda2.cc  splotch_cuda2.h  splotch_kernel.h  utils.h
palettes/: Blue.pal  BlueSimple.pal  CyanPurple.pal  Fancy.pal  LongFancy.pal  NewSplotch.pal  RedSimple.pal  TronInv.pal
parameterfiles/: HDF5_Compound.par  demo.par  explore_simulation.par  g51.par  sample.par  server_default.par  show_palette.par
previewer/: Previewer.cpp  Previewer.h
previewer-windows_cinderx64/: Readme.txt
reader/: BonsaiIO.h  CreaInput_1.0.tcl  F90_UnformattedIO.h  IFile.h  ascii_reader.cc  bin_reader.cc  bin_reader_mpi.cc  bonsai_reader.cc  enzo_reader.cc  fits_reader.cc  gadget_hdf5_reader.cc  gadget_reader.cc  galaxy_reader.cc  h5part_reader.cc  hdf5_reader.cc  hdf5_reader.h  mesh_reader.cc  millenium_reader.cc  ramses_helper_lib.h  ramses_reader.cc  reader.h  tipsy_reader.cc  visivo_reader.cc
server/: camera.cc  camera.h  command.h  controller.cc  controller.h  data.cpp  data.h  event.h  fast_timer.h  filter.h  interface.h  json_maker.h  matrix4.cc  matrix4.h  observe.h  server.cc  server.h
utils/: box.h  (+10 more)
(+282 files in other folders)
