# ============================================================================
# Name        : partition.c
# Author      : Gian Franco Marras
# Version     : 1.0
# Copyright   : free
# Description : A simple MPI Library I/O for access file in parallel system
# ============================================================================


ACLOCAL_AMFLAGS = -I m4
m4dir = ${top_srcdir}/m4

SUBDIRS = src man 
dist_doc_DATA     = README
docdir = ${exec_prefix}/doc